--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,7 @@ body {
 
 .header-wrapper {
     position: relative;
-    background-image: url(/img/background-head.jpg);
+    background-image: url(../img/background-head.jpg);
     background-repeat: no-repeat;
     background-position: 50%;
     background-size: cover;
